--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudinary/react": "^1.9.0",
+    "@cloudinary/url-gen": "^1.9.0",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^4.24.2",
     "@testing-library/jest-dom": "^5.16.5",
