--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.9.0",
     "@cloudinary/url-gen": "^1.9.0",
+    "@emailjs/browser": "^3.10.0",
     "@react-icons/all-files": "^4.1.0",
     "@tanstack/react-query": "^4.24.2",
     "@testing-library/jest-dom": "^5.16.5",
